- Fixing cutoff jumbotron text

--- a/assets/css/vh-slider.css
+++ b/assets/css/vh-slider.css
@@ -254,6 +254,7 @@ box-shadow: 1px 1px 2px rgba(0,0,0,0.1);
     }
     .da-slide p{
         width: 60%;
+        height: inherit;
         font-size: 18px;
         /*line-height: 18px;*/
         overflow: hidden;
